src/styles/components/_header.scss
.Header {
    height: $site-header-height;
    background-color: $head-color;
    /*background-image: url(/../../images/baal-hasulam.png);
    background-position: top right;
    background-repeat: no-repeat;
    background-size: contain;
    background-color: #575757;*/

    .Logo {
        position: absolute;
        left: 30px;
        width: $logo-width;
        height: $logo-height;
        background-color: $color-2nd;
        color: #fff;
        display: flex;
        align-items: center;
        justify-content: center;
        text-align: center;
        font-weight: $f-black;
        font-size: 1.1rem;
        box-shadow: 0 0 4px 1px rgba(0,0,0,0.3);
        border: 0;

        &:hover {
            color: #fff;
            box-shadow: 0 0 4px 1px rgba(0,0,0,0.4);
        }

        &:after {
            content: 'מבית מדרש הסולם';
            position: absolute;
            font-size: 0.7rem;
            font-weight: $f-light;
            width: 100%;
            text-align: center;
            bottom: 3px;
        }
    }

}

